@startuml clases_acceso

title Diagrama de Clases — apps.acceso (P1: Acceso y Seguridad)

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #EFF6FF
  BorderColor #1A5276
}

abstract class "AbstractUser" as AbstractUser <<django.contrib.auth>> {
  + first_name: CharField
  + last_name: CharField
  + is_active: BooleanField
  + is_staff: BooleanField
  + is_superuser: BooleanField
  + last_login: DateTimeField
  + date_joined: DateTimeField
  + set_password(raw): void
  + check_password(raw): bool
}

class Usuario {
  + email: EmailField {unique}
  --
  USERNAME_FIELD = "email"
  REQUIRED_FIELDS = []
  objects: UsuarioManager
  --
  + __str__(): str
  + get_rol(): str
}
note right of Usuario
  username = None (deshabilitado).
  get_rol() retorna el nombre del
  primer Group asignado, o "".
end note

class UsuarioManager <<Manager>> {
  + create_user(email, password, **extra): Usuario
  + create_superuser(email, password, **extra): Usuario
}

class PerfilEstudiante {
  + nro_registro: CharField(20) {unique}
  + carrera: CharField(150)
  + anio_ingreso: PositiveSmallIntegerField
  --
  + __str__(): str
}
note bottom of PerfilEstudiante
  <b>Defecto detectado:</b> __str__() referencia
  self.legajo, atributo inexistente — el campo
  real se llama nro_registro. Lanza AttributeError
  si se invoca (p. ej. desde Django Admin).
  apps/acceso/models.py:70
end note

class Group <<django.contrib.auth>> {
  + name: CharField {unique}
}

Usuario --|> AbstractUser
UsuarioManager ..> Usuario : crea instancias >

Usuario "1" -- "0..1" PerfilEstudiante : usuario >\n(related_name=\nperfil_estudiante)
Usuario "0..*" -- "0..*" Group : groups >\n(M2M de Django)

note as N1
  <b>get_rol()</b> usa la primera relación
  Usuario↔Group para derivar el "rol" de
  negocio (Director / Operador / Estudiante),
  ya que el sistema no modela un campo
  rol explícito — reutiliza el sistema de
  permisos nativo de Django.
end note
Usuario .. N1

@enduml
